Fix Databricks Schema Browser scrollbar (#5023)

--- a/client/app/assets/less/inc/schema-browser.less
+++ b/client/app/assets/less/inc/schema-browser.less
@@ -27,8 +27,7 @@ div.table-name {
 }
 
 .schema-browser {
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   border: none;
   padding-top: 10px;
   position: relative;
